<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_wp_nav</name>
  <version>0.0.0</version>
  <description>ros2 package for waypoint navigation</description>
  <maintainer email="s19c1057fa@s.chibakoudai.jp">kazuki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>action_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>